force-app/main/default/objects/RangeDiscount__c/RangeDiscount__c.object-meta.xml
<CustomObject>
    
    <label>Desconto de Banda</label>
    <nameField>
        <displayFormat>DESC-{0000}</displayFormat>
        <label>Desconto de Banda</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Descontos de Banda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>