force-app/main/default/objects/RangeDiscount__c/fields/ApprovingAuthority__c.field-meta.xml
<CustomField>
    <fullName>ApprovingAuthority__c</fullName>
    <label>Alçada Aprovadora</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ClusterDirector</fullName>
                <label>Diretor do Cluster</label>
            </value>
            <value>
                <fullName>InvesteeDirector</fullName>
                <label>Diretor da Investida</label>
            </value>
            <value>
                <fullName>GGN</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
                <label>Gerente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>