force-app/main/default/objects/RangeDiscount__c/fields/ClusterExternalId__c.field-meta.xml
<CustomField>
    <fullName>ClusterExternalId__c</fullName>
    <description>Campo utilizado para filtrar a politica comercial, filtrando por cluster os registros de desconto de banda.</description>
    <inlineHelpText>Campo utilizado para filtrar a politica comercial, filtrando por cluster os registros de desconto de banda.</inlineHelpText>
    <label>Chave do Cluster</label>
    <length>100</length>
    <type>Text</type>
</CustomField>