force-app/main/default/objects/RangeDiscount__c/fields/CustomerCategory__c.field-meta.xml
<CustomField>
    <fullName>CustomerCategory__c</fullName>
    <label>Categoria do Cliente</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>