force-app/main/default/objects/RangeDiscount__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Descontos de Banda</relationshipLabel>
    <relationshipName>RangeDiscounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>