force-app/main/default/objects/RangeDiscount__c/fields/FinalDate__c.field-meta.xml
<CustomField>
    <fullName>FinalDate__c</fullName>
    <label>Data Final</label>
    <type>Date</type>
</CustomField>