force-app/main/default/objects/RangeDiscount__c/fields/MaximaPercentage__c.field-meta.xml
<CustomField>
    <fullName>MaximaPercentage__c</fullName>
    <label>Porcentagem Maxima</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>