force-app/main/default/objects/RangeDiscount__c/fields/MinimumPercentage__c.field-meta.xml
<CustomField>
    <fullName>MinimumPercentage__c</fullName>
    <label>Porcentagem Minima</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>