force-app/main/default/objects/RangeDiscount__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>Indica se o tipo de pagamento será a vista ou a prazo.</description>
    <inlineHelpText>Indica se o tipo de pagamento será a vista ou a prazo.</inlineHelpText>
    <label>Tipo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTypeGlobalList</valueSetName>
    </valueSet>
</CustomField>