force-app/main/default/objects/RangeDiscount__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Descontos de Banda</relationshipLabel>
    <relationshipName>RangeDiscounts</relationshipName>
    <type>Lookup</type>
</CustomField>