force-app/main/default/objects/RangeDiscount__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que armazena a organização de vendas a qual esta politica comercial pertence.</description>
    <inlineHelpText>Campo que armazena a organização de vendas a qual esta politica comercial pertence.</inlineHelpText>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Descontos de Banda</relationshipLabel>
    <relationshipName>Descontos_de_Banda</relationshipName>
    <type>Lookup</type>
</CustomField>